ant: Add *.fxml to jar, fix 'run'